--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! This is the new webpage !!
+<h4> Changes made locally </h4>
+
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
